fix(deps): Spring Boot 3.3 + Java 17 para reducir CVEs (Trivy)