@@ -1,38 +1,40 @@
 package au.com.equifax.cicddemo;
 
-import au.com.equifax.cicddemo.domain.SystemTest;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.remote.RemoteWebDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
-import org.junit.Test;
-import org.junit.Assert;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.experimental.categories.Category;
+import org.openqa.selenium.remote.RemoteWebDriver;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 
-@Category(SystemTest.class)
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+
+@Tag("SystemTest")
 public class SeleniumExampleTest {
     private WebDriver driver;
 
     @Test
-    public void testOs () {
-        System.out.println("APP_URL :"+System.getenv("APP_URL"));
+    public void testOs() {
+        System.out.println("APP_URL :" + System.getenv("APP_URL"));
         driver.get(System.getenv("APP_URL"));
         String bodyText = driver.findElement(By.tagName("body")).getText();
-        Assert.assertTrue(bodyText.contains("Linux"));
-        Assert.assertFalse(bodyText.contains("Windows"));
+        assertTrue(bodyText.contains("Linux"));
+        assertFalse(bodyText.contains("Windows"));
     }
 
-    @Before
-    public void beforeTest() throws MalformedURLException {
-        driver = new RemoteWebDriver(new URL("http://selenium:4444/wd/hub"), new ChromeOptions());
+    @BeforeEach
+    public void beforeTest() throws MalformedURLException, URISyntaxException {
+        driver = new RemoteWebDriver(new URI("http://selenium:4444/wd/hub").toURL(), new ChromeOptions());
     }
 
-    @After
+    @AfterEach
     public void afterTest() {
         driver.quit();
     }
